...
    return ChangeNotifierProvider.value(
      value: WorkoutProvider(initialSets: workout.sets),
      child: Consumer<WorkoutProvider>(
        builder: (context, provider, _) => Scaffold(
          appBar: AppBar(
            title: Text(
              workoutIndex == null ? 'New Workout' : 'Edit Workout',
            ),
            actions: [
              IconButton(
                icon: const Icon(Icons.save),
                onPressed: () {
                  provider.saveWorkout(index: workoutIndex);
...
