...
                      padding: EdgeInsets.symmetric(horizontal: 10),
                      decoration: BoxDecoration(
                          color: appTheme.cardColor,
                          border: Border.all(color: appTheme.cardColor),
                          borderRadius: BorderRadius.circular(10)),
                      child: DropdownButton<String>(
                        key: const Key('exercise-button'),
                        value: set.exercise,
                        onChanged: onExerciseChanged,
                        items: exercises
                            .map((String exercise) => DropdownMenuItem<String>(
                                  value: exercise,
                                  child: Text(exercise,
...
